some summaries for gout, obesity, and t2d so far in the median centered gene section

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -196,7 +196,7 @@ Admixture analysis is a method that can be used to infer the number of ancestral
 
 
 
-When the ancestral proportions for K = 11 were plotted for each individual for each population, there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations, \gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, and other admixture analysis [@1KGP2015snp; Hellenthal2014], but also showed that there were sub-groups within the super-populations.
+When the ancestral proportions for K = 11 were plotted for each individual for each population, there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations, \gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, and other admixture analysis [@1KGP2015snp; @Hellenthal2014], but also showed that there were sub-groups within the super-populations.
 
 
 
@@ -728,7 +728,9 @@ fwh_met$pos_pol <- fwh_pos_pol_genes %>% filter( SYMBOL %in% genelists$genename)
 fwh_met$pos_not_only_pol <-  fwh_pos_pol_genes %>% filter( SYMBOL %in% genelists$genename) %>% select(contains('chrom'),SYMBOL, ALLsum, AFRsum, EURsum, SASsum, EASsum, POLsum, contains("EAS"), contains("POL")) %>% arrange(desc(POLsum)) %>% filter(POLsum < ALLsum, !(SYMBOL %in% fwh_pos_no_pol_genes )) %>% pull(SYMBOL) %>% unique()
 ```
 
-Of the genes that were in the windows of the 1^st^ percentile, there were `r fwh_met$neg_pol %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows that intersected them from the Polynesian populations. Thirteen of those genes were for windows from Polynesian populations, as well as others. Some examples of these genes were _RASA2_ and _ERBB4_, and both are associated with obesity traits and involved in signalling pathways. _RASA2_ had windows only from \gls{cim} and \gls{nzm}. _ERBB4_ had windows from all four Polynesian populations, as well as the populations of \gls{eas} - except \gls{jpt}. There were `r fwh_met$pos_pol %>% length()` genes that were in the 99^th^ percentile that were also in the list of genes of metabolic disease associated genes. Some examples of genes that had windows in both Polynesian and other populations in the 99^th^ percentile include _SHROOM3_, _RBMS1_, and _UBE2E2_. _SHROOM3_ was an example of a gene that had windows in common from all the other super populations, except \gls{eas}. _RBMS1_ had multiple windows for across all Polynesian populations, but not other super populations. And _UBE2E2_ had multiple windows across the Polynesian populations, as well as the populations of \gls{eas} and \gls{sas}. _SHROOM3_ was an example of a gene associated with kidney disease, with its role being in the development of the kidney [@Khalili2016]. 
+Of the genes that were in the windows of the 1^st^ percentile, there were `r fwh_met$neg_pol %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows that intersected them from the Polynesian populations. Thirteen of those genes were for windows from Polynesian populations, as well as others. Some examples of these genes were _RASA2_ and _ERBB4_, and both are associated with obesity traits and involved in signalling pathways. _RASA2_ had windows only from \gls{cim} and \gls{nzm}. _ERBB4_ had windows from all four Polynesian populations, as well as the populations of \gls{eas} - except \gls{jpt}. 
+
+There were `r fwh_met$pos_pol %>% length()` genes that were in the 99^th^ percentile that were also in the list of genes of metabolic disease associated genes. Some examples of genes that had windows in both Polynesian and other populations in the 99^th^ percentile include _SHROOM3_, _RBMS1_, and _UBE2E2_. _SHROOM3_ was an example of a gene that had windows in common from all the other super populations, except \gls{eas}. _RBMS1_ had multiple windows for across all Polynesian populations, but not other super populations. And _UBE2E2_ had multiple windows across the Polynesian populations, as well as the populations of \gls{eas} and \gls{sas}. _SHROOM3_ was an example of a gene associated with kidney disease, with its role being in the development of the kidney [@Khalili2016]. 
 
 
 ```{r, eval = FALSE}
@@ -839,7 +841,9 @@ Clustering on the windows from the upper tail put the super populations into the
 
 ##### Metabolic disease associated genes
 
-There were `r flf_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows in the 1^st^ percentile,that intersected them from the Polynesian populations. Some examples of these genes were _MAFC1_ and _DNAH10_. _MAFC1_ had six windows, some of which were in common with the \gls{amr} and \gls{afr} populations. _DNAH10_ had 18 windows, with about half being in common with the populations of \gls{eur}, \gls{eas}, \gls{sas}, and \gls{amr}. There were `r flf_pos_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` of genes that were in the 99^th^ percentile for Polynesians. Some examples were _HLA-B_, _PTPRD_, _LIPC_, _SHROOM3_, and _ABO_. _HLA-B_ was in common with all the super populations, although only half of the populations of \gls{afr}. _PTPRD_ was mostly only the four \gls{pol} populations with a few windows that were in common with a population for either \gls{sas} or \gls{amr}. _LIPC_ had windows in common for all Polynesian populations, and also shared with \gls{eas}, \gls{sas}, and \gls{amr}. _SHROOM3_ was in the Eastern Polynesian populations, but also in common with \gls{eas}, and to a lesser degree \gls{eur} and \gls{amr} and \gls{afr}. _ABO_ was in the Eastern Polynesian populations and also in common with \gls{eas}, \gls{sas}, and \gls{afr}.
+There were `r flf_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows in the 1^st^ percentile,that intersected them from the Polynesian populations. Some examples of these genes were _MAFC1_, _DNAH10_ and _SLC2A9_. _MAFC1_ had six windows, some of which were in common with the \gls{amr} and \gls{afr} populations. _DNAH10_ had 18 windows, with about half being in common with the populations of \gls{eur}, \gls{eas}, \gls{sas}, and \gls{amr}. The urate transporter _SLC2A9_ had multiple significant windows in \gls{ton}, \gls{jpt}, and \gls{chb}.
+
+There were `r flf_pos_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` of genes that were in the 99^th^ percentile for Polynesians. Some examples were _HLA-B_, _PTPRD_, _LIPC_, _SHROOM3_, and _ABO_. _HLA-B_ was in common with all the super populations, although only half of the populations of \gls{afr}. _PTPRD_ was mostly only the four \gls{pol} populations with a few windows that were in common with a population for either \gls{sas} or \gls{amr}. _LIPC_ had windows in common for all Polynesian populations, and also shared with \gls{eas}, \gls{sas}, and \gls{amr}. _SHROOM3_ was in the Eastern Polynesian populations, but also in common with \gls{eas}, and to a lesser degree \gls{eur} and \gls{amr} and \gls{afr}. _ABO_ was in the Eastern Polynesian populations and also in common with \gls{eas}, \gls{sas}, and \gls{afr}.
 
 
 ```{r, eval = FALSE}
@@ -1528,11 +1532,13 @@ Clustering on other diseases such as pd, macular degeneration, alzhimers and col
 -->
 #### Urate and gout
 
-There were `r length(unique(gc_urate_gout_GR$SYMBOL))` loci that had an association with urate or gout at a genome-wide significance level in the \gls{gwas} catalog. This mapped to `r nrow(gout$mat_d$Tajima.D)` windows for each of the frequency based selection test statistics. \gls{ze} and \gls{fwh} clustered each super population into their own group and each cluster was exclusive to a super population. Both \gls{td} and \gls{flf} grouped most of the super populations correctly and nearly all clusters had good exclusivity for each single super population (Tables \@ref(tab:proportion) and \@ref(tab:exclusivity)). \Gls{td}, \gls{fwh}, and \gls{ze} also had an Eastern/Western Polynesian population sub group within the Polynesian group (Figure \@ref(fig:goutdendros)). Unlike the F~ST~ clustering, the \gls{amr} populations were grouped together for \gls{td}, \gls{fwh}, and \gls{ze}. The \gls{eas} and \gls{pol} populations were closest for \gls{td} \gls{flf}, \gls{fwh}, and \gls{ze}.
+There were `r length(unique(gc_urate_gout_GR$SYMBOL))` loci that had an association with urate or gout at a genome-wide significance level in the \gls{gwas} catalog. This mapped to `r nrow(gout$mat_d$Tajima.D)` windows for each of the frequency based selection test statistics. Tables \@ref(tab:gouttdgeneclus),  \@ref(tab:goutfwhgeneclus),  \@ref(tab:goutflfgeneclus), and \@ref(tab:goutzegeneclus) contain the median centered values for the windows used in the clustering. All statistics (\gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}) grouped most of the super populations correctly and nearly all clusters had good exclusivity for each single super population (Tables \@ref(tab:proportion) and \@ref(tab:exclusivity)). \Gls{td}, \gls{fwh}, and \gls{ze} also had an Eastern/Western Polynesian population sub group within the Polynesian group (Figure \@ref(fig:goutdendros)). Unlike the F~ST~ clustering, the \gls{amr} populations were grouped together for \gls{td}, \gls{fwh}, and \gls{ze}. The \gls{eas} and \gls{pol} populations were closest for \gls{td} \gls{flf}, \gls{fwh}, and \gls{ze}.
 
-> what were the similarities at the loci like between populations? and were any loci that were significant also significant in other pops?
+One of the trends across all of the statistics, was that within a super population, the range of values within a gene were very similar, but between super populations there could be completely different directions. _INHBB_ was an example of a locus with \gls{fwh} that showed similarity in scrores of populations with similar ancestry, such as between the \gls{pol} and \gls{eas} which were positive, \gls{sas} was near zero but slighty positive, \gls{eur} and \gls{amr} were near zero but slightly negative, and \gls{afr} was more negative (Table \@ref(tab:goutfwhgeneclus)). Another example was with _RREB1_, where for \gls{td}, the \gls{pol} populations were sitting around -2 , with the \gls{eas} populations slightly less negative, and the other populations sat around zero (Table \@ref(tab:gouttdgeneclus)). A similar pattern was seen in _RREB1_ with \gls{flf} (Table \@ref(tab:gouttdgeneclus)). With \gls{ze}, _SLC22A12_ and _SLC22A12_ both had \gls{afr}, \gls{eas}, and \gls{pol} negative, and \gls{amr}, \gls{eur}, and \gls{sas} positive (Table \@ref(tab:goutzegeneclus)). And both _SLC17A1_ and _SLC17A4_ had all populations with negative \gls{ze}, except the \gls{pol} populations, which were positive. _SLC2A9_ tended to be overall more negative in value for all statistics for both \gls{pol} and \gls{eas} than for the other super populations.
 
-> stating the significant windows seems a bit redundant considering the previous subsections for the extreme windows
+<!-- > what were the similarities at the loci like between populations? and were any loci that were significant also significant in other pops? -->
+
+<!-- > stating the significant windows seems a bit redundant considering the previous subsections for the extreme windows -->
 
 
 ```{r, eval = FALSE}
@@ -1540,7 +1546,7 @@ gout$mat_d$Tajima.D %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, td
 ```
 
 ```{r, eval = FALSE}
-gout$mat_d$Tajima.D %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, td, -contains("chrom")) %>% left_join(., gout$mat_d$Tajima.D %>% select(contains("chrom")) %>% mutate(chrom = paste0('chr', chrom)) %>% GRanges() %>% txdb_gene_annotate() , by = c('chrom' = "seqnames", "chrom_start" = 'start', "chrom_end" = "end")) %>% mutate(superpop = str_sub(pop, 1,3))%>% filter(SYMBOL %in% gc_urate_gout_GR$SYMBOL) %>% group_by(pop, SYMBOL) %>% summarise( min(td), median(td), max(td), mean = mean(td), sd(td)) %>% select(SYMBOL, pop, mean) %>% spread(SYMBOL, mean) %>% View()
+gout$mat_d$Tajima.D %>%  mutate(chrom = paste0('chr', chrom)) %>% gather(pop, td, -contains("chrom")) %>% left_join(., gout$mat_d$Tajima.D %>% select(contains("chrom")) %>% mutate(chrom = paste0('chr', chrom)) %>% GRanges() %>% txdb_gene_annotate() , by = c('chrom' = "seqnames", "chrom_start" = 'start', "chrom_end" = "end")) %>% mutate(superpop = str_sub(pop, 1,3))%>% filter(SYMBOL %in% gc_urate_gout_GR$SYMBOL) %>% group_by(pop) %>% summarise( min(td), median(td), max(td), mean = mean(td), sd(td)) %>% select(SYMBOL, pop, mean) %>% spread(SYMBOL, mean) %>% View()
 ```
 
 ```{r, eval =  FALSE}
@@ -1650,11 +1656,13 @@ multiplot(gene_dendros(gene_data = gout$mat_d$Tajima.D[,-1:-3]) + ggtitle("Tajim
 #### Obesity
 
 
-The \gls{gwas} catalog had `r length(unique(obesity_GR$SYMBOL))` loci associated with obesity, this was represented by `r nrow(obesity$mat_d$Tajima.D)` windows and the clustering resulted in the groupings of super populations (Figure \@ref(fig:obesitydendros)). Exclusivity of a single super population to a cluster was also high with the notable exception being the \gls{amr} populations of \gls{clm} and \gls{pur} often being part of the \gls{eur} cluster. The Polynesian super population cluster was also closest to \gls{eas} in all selection statistics and also had an Eastern/Western sup-grouping within the \gls{pol} group.
+The \gls{gwas} catalog had `r length(unique(obesity_GR$SYMBOL))` loci associated with obesity, this was represented by `r nrow(obesity$mat_d$Tajima.D)` windows and the clustering resulted in the groupings of super populations (Figure \@ref(fig:obesitydendros)). Exclusivity of a single super population to a cluster was also high with the notable exception being the \gls{amr} populations of \gls{clm} and \gls{pur} often being part of the \gls{eur} cluster (Tables \@ref(tab:proportion) and \@ref(tab:exclusivity)). Tables \@ref(tab:obesitytdgeneclus),  \@ref(tab:obesityfwhgeneclus),  \@ref(tab:obesityflfgeneclus), and \@ref(tab:obesityzegeneclus) contain the median centered statistic values for the windows used in the clustering. The Polynesian super population cluster was also closest to \gls{eas} in all selection statistics and also had an Eastern/Western sup-grouping within the \gls{pol} group.
+
+Much like the urate associated genes, the same trend of within a superpopulation, genes had similar values, but there could be completely different directions of statistic between super populations held. Some examples of this included _LEPR_ and _FOXE1_, where for \gls{fwh}, \gls{td}, and \gls{flf}, for the \gls{eas} and \gls{pol} populations the windows were mostly negative, whereas for the other populations they were close to zero or even positive. _ARL15_ was an example of a locus that all populations had a range of values, but the \gls{pol} populations had the most negative for all statistics, and in \gls{td}, \gls{fwh}, and \gls{flf} the \gls{eas} populations showed similarity with the \gls{pol} populations in the values of the statistics.
 
 <!-- There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` of the obesity-associated loci that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci with at least one window that was significant in the Polynesian populations. _ADAMTSL3_, _AGBL4_, _ARL15_, _CCR3_, _CREB1_, _ERBB4_, _FER_, _FHIT_, _GRID1_, _LTBP1_, _MAP2K5_, and _ZBTB38_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the lower tail. Only _DNAH10_ had a significant window for each of \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}, and this was only in the \gls{nzm} population. The upper tail had a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% NROW()` loci that had at least a window that was significant in the Polynesian populations. _ADCY3_, _CHST8_, _CMIP_, _ERBB4_, _FHIT_, _FTO_, _GRID1_, _HMGA2_, _LTBP1_, _NEGR1_, _NRXN3_, _NT5C2_, _PARK2_, _PRKCH_, _RARB_, and  _TCF7L2_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the upper tail. -->
 
-> _How could this be summarised?_
+
 
 ```{markdown, eval = FALSE}
 any stat
@@ -1712,7 +1720,7 @@ The \gls{gwas} catalog had `r length(unique(t2d_GR$SYMBOL))` genes associated wi
 
 <!-- There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` \gls{t2d} associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` genes that had a significant window in any Polynesian population. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` genes with at least a window that met the significance threshold in the Polynesian populations. Only _THADA_ had windows from \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze} in the \gls{ton} population from the Polynesian populations. This was also true for the \gls{cdx} and \gls{chs} populations. _ARL15_, _MACF1_, _RREB1_, and _THADA_ each had in all Polynesian populations, at least one statistic that was significant in the lower tail. In the upper tail, _HLA-B_, _HMGA2_, _HNF1B_, _PTPRD_, _RBMS1_, _SGCG_, _TCF7L2_, and _THADA_ each had, in all Polynesian populations, at least one statistic that was significant. -->
 
-> _How could this be summarised?_
+Again, most of the loci that were associated with \gls{t2d} followed the same trend of values within a super population being similar, and differences between the super populations. An example where this wasn't the case was _SSR1_,  where all populations, except the Eastern Polynesian populations were very similar and close to zero, whereas the Eastern Polynesian populations were negative in all statistics, but not extreme enough to be in the 1^st^ percentile.
 
 ```{markdown, eval = FALSE}
 any stat
